@startuml SCRUM-154 PostgreSQL ERD (auction_db)

title PostgreSQL schema — auction_db\nSource of truth: FYP/src/main/resources/auction_db.sql

skinparam roundcorner 8
skinparam linetype ortho
hide circle

entity "roles" as roles {
  * id : SMALLINT <<PK>>
  --
  * role : VARCHAR(50)
}

entity "user_status" as user_status {
  * id : SMALLINT <<PK>>
  --
  * status : VARCHAR(50)
}

entity "users" as users {
  * id : BIGINT <<PK>>
  --
  * email : VARCHAR(255) <<UNIQUE>>
  * username : VARCHAR(255) <<UNIQUE>>
  * password : VARCHAR(255)
  * role_id : SMALLINT <<FK>>
  * date_created : TIMESTAMPTZ
  * status_id : SMALLINT <<FK>>
  two_factor_enabled : BOOLEAN
  two_factor_secret : TEXT
  phone_encrypted : TEXT
  address_encrypted : TEXT
  profile_image_url : VARCHAR(512)
}

entity "auction_status" as auction_status {
  * id : SMALLINT <<PK>>
  --
  * status : VARCHAR(50)
}

entity "auction_type" as auction_type {
  * id : SMALLINT <<PK>>
  --
  * type : VARCHAR(50)
}

entity "item_status" as item_status {
  * id : SMALLINT <<PK>>
  --
  * item_condition : VARCHAR(50)
}

entity "tags" as tags {
  * id : BIGINT <<PK>>
  --
  * tag_name : VARCHAR(255)
}

entity "auction" as auction {
  * auction_id : BIGINT <<PK>>
  --
  * status_id : SMALLINT <<FK>>
  * seller_id : BIGINT <<FK>>
  * date_created : TIMESTAMP
  * date_end : TIMESTAMP
  * auction_type : SMALLINT <<FK>>
}

entity "auction_details" as auction_details {
  * id : BIGINT <<PK_FK>>
  --
  * title : VARCHAR(255)
  * description : TEXT
  * item_condition_id : SMALLINT <<FK>>
  winning_bid : INTEGER
  winner_id : INTEGER
}

entity "auction_images" as auction_images {
  * id : BIGINT <<PK>>
  --
  * auction_id : BIGINT <<FK>>
  * image_url : TEXT
  * upload_date : TIMESTAMP
}

entity "auction_tag_info" as auction_tag_info {
  * auction_id : BIGINT <<PK_FK>>
  * tag_id : BIGINT <<PK_FK>>
}

entity "bids" as bids {
  * bid_id : BIGINT <<PK>>
  --
  * auction_id : BIGINT <<FK>>
  * user_id : BIGINT <<FK>>
  * bid_amount : NUMERIC(10,2)
  * bid_time : TIMESTAMP
}

users }o--|| roles : role_id
users }o--|| user_status : status_id

auction }o--|| auction_status : status_id
auction }o--|| auction_type : auction_type
auction }o--|| users : seller_id

auction_details ||--|| auction : 1to1_detail
auction_details }o--|| item_status : item_condition_id

auction_images }o--|| auction : auction_id

auction_tag_info }o--|| auction : auction_id
auction_tag_info }o--|| tags : tag_id

bids }o--|| auction : auction_id
bids }o--|| users : user_id

note right of users
  PII: phone/address stored encrypted (AES-GCM ciphertext).
  Passwords: salted hash at application layer.
end note

@enduml
